fix: Date input was wrapped with a span used to create a custom calendar icon using SVG and mask image so that safari browsers can render the desired date picker icon.

--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,51 @@ input[type="reset"]:hover {
 @supports (-webkit-touch-callout: none) {
   input[type="date"] {
     min-height: 2.5rem;
+    appearance: none;
+    -webkit-appearance: none;
+    display: block;
+    position: relative;
+    padding: 0.75rem;
+    width: 100%;
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.1);
+    /* Custom wrapper for date input */
+    .dateWrapper {
+      position:relative;
+      width: 100%;
+      display: block; 
+    }
+  
+    /* position the calendar icon */
+    .dateWrapper::after {
+      content: '';
+      position: absolute;
+      right: 0.75rem;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+      background: var(--primary-bg-color);
+      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M19 4h-1V2h-2v2H8V2H6v2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z'/%3E%3C/svg%3E");
+      -webkit-mask-image:  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M19 4h-1V2h-2v2H8V2H6v2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z'/%3E%3C/svg%3E");
+      mask-size: contain;
+      -webkit-mask-size: contain;
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      pointer-events: none;
+    }
+  
+    input[type="date"]::-webkit-calendar-picker-indicator {
+      opacity: 0;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      cursor: pointer;
+    }
   }
 
   input[type="text"],
